# fastcomments-python

./: .env.example  .gitignore  README.md  bump.sh  openapi-config.json  openapitools.json  publish.sh  pyproject.toml  test.sh  update.sh
.github/workflows/: ci.yml
client/: .gitlab-ci.yml  .openapi-generator-ignore  .travis.yml  README.md  __init__.py  api_client.py  configuration.py  exceptions.py  pyproject.toml  rest.py  setup.py
client/.openapi-generator/: FILES
client/api/: __init__.py  default_api.py  moderation_api.py  public_api.py
client/docs/: APIAuditLog.md  APIBanUserChangeLog.md  APIBanUserChangedValues.md  APIBannedUser.md  APIBannedUserWithMultiMatchInfo.md  APIComment.md  APICommentBase.md  APICommentBaseMeta.md  APICommentCommonBannedUser.md  APICreateUserBadgeResponse.md  APIDomainConfiguration.md  APIEmptyResponse.md  APIEmptySuccessResponse.md  APIError.md  APIGetCommentResponse.md  APIPage.md  (+630 more)
core/: README.md  pyproject.toml  requirements.txt
core/examples/: secure_sso.py  simple_sso.py
core/sso/: fastcomments_sso.py  helpers.py
fastcomments_client/: README.md  pyproject.toml  setup.py
fastcomments_core/: README.md  pyproject.toml
fastcomments_core/examples/: secure_sso.py  simple_sso.py
fastcomments_core/fastcomments_core/sso/: fastcomments_sso.py
pubsub/: __init__.py  live_event_subscriber.py  subscribe_to_changes_result.py
sso/: fastcomments_sso.py  secure_sso_payload.py  secure_sso_user_data.py  simple_sso_user_data.py
tests/: __init__.py  conftest.py  env.py  test_pubsub.py  test_sso.py  test_sso_integration.py
(+1765 files in other folders)
