[project]
name = "fastcomments-core"
version = "0.0.1"
authors = ["FastComments"]
description = "Fastcomments python core for SSO and client interaction"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/FastComments/fastcomments-python"
Issues = "https://github.com/FastComments/fastcomments-python/issues"
