[tool.poetry]
name = "fastcomments_core"
version = "0.0.1"
authors = ["FastComments"]
description = "Fastcomments python core for SSO and client interaction"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

fastcomments_client = { path = "../fastcomments_client" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = [
    "sso"
]